Add region changes

--- a/Support/Country Survey Details/CHL/CASEN/1. Introduction to CASEN.md
+++ b/Support/Country Survey Details/CHL/CASEN/1. Introduction to CASEN.md
@@ -55,9 +55,11 @@ The results are significant at national, rural, urban, regional, and *cities of 
 ### 2011 survey
 For 2011, information on methodology and variables in the raw data is limited compared to other years. Moreover, in 2011, the National Statistics Institute (INE) and the Ministry of Social Development changed the survey design. The CASEN website only compiles details about the changes but does not present the information on the number of households or individuals surveyed. As a result, the GLD project harmonized the dataset but could not have compare the results (e.g., sample counts, population LFP estimates) against official releases as in other years.
 
+### Region changes
+In 2007 two new regions were created. The region of *Los Ríos* was carved out of Los Lagos and the region of *Arina y Parinacota* was carved out of Tarapacá. Thus, the data until 2006 has 13 regions and the data from 2009 on has 15 regions. The codes for regions 1 to 13 remain the same. Los Ríos has code 14 and Arica and Parinacota has code 15. The evolution is covered in `subnatid1_prev` in the 2009 harmonization.
+
 ### Province Information
 Province information is coded under the variables subnatid2 for all years except 2011 and 2013 (information absent from the raw dataset). In addition, the codes are not consistent over time because the survey is not significant at the province level. In some instances, the code conferred to one province may change in the next because that year, the specific province was not considered by the sample design. Please, visit the CASEN methodology to learn more.
-
 
 ### ICLS Changes
 Labour surveys or labour chapters in household surveys follow the versions published after the International Labour Statistics Conferences agree on a significant change in labour statistics definitions; visit this website to learn more.  In the CASEN, the NSO used the ICLS-13 definition until 2009 and the ICLS-19 from 2011 onwards. The main difference is in the economic activity definition to classify independent workers. The ICLS-13 type of question focus on independent workers' economic activities classified into one economic activity, self-work. The ICLS-19, survey questions focus on grouping activities of independent workers in subgroups such as independent work in agriculture or commerce.
