Update to latest version 2

--- a/Support/B - Country Survey Details/MEX/ENOE/1. Introduction to ENOE.md
+++ b/Support/B - Country Survey Details/MEX/ENOE/1. Introduction to ENOE.md
@@ -123,29 +123,32 @@ the basic questionnaire versions.
 
 The ENOE codes occupation based on the "Mexican Classification of Occupations" (Clasificación Mexicana de Ocupaciones - CMO) from 2005 to 2012 and from 2013 to 2020 on the "National System of Classification of Occupations" (Sistema Nacional de Clasificación de Ocupaciones - SINCO). These are mapped to ISCO-08. 
 
-On the industry side, ENOE codifies industry over the years based on four different versions of the North American System of Industrial Classification (Sistema de Clasificación Industrial de América del Norte - SCIAN), namely the 2002, 2007, 2013, and 2018 versions. The first is mapped to ISIC-3.1, while the others are mapped to ISIC-4. 
+On the industry side, ENOE codifies industry over the years based on four different versions of the North American System of Industrial Classification (Sistema de Clasificación Industrial de América del Norte - SCIAN), namely the 2007 versions, all data is mapped to ISIC-4. 
 
 The table below provides an overview of the different versions underlying the survey as well as what version they have been mapped to. The precise details of how the mapping was done is covered [here in a separate document on occupations](Correspondence_occup_ISCO.md) as well as [here on industry classification](Correspondence_NAICS_ISIC.md).
 
 
 | Year of survey	| National occup version	| ISCO version	| National industry version	| ISIC version	|
 | :----:		| :----:			| :----:	| :----:			| :----:	|
-| 2005			| CMO 				| ISCO-08	| SCIAN 2002			| ISIC-3.1	|
-| 2006			| CMO				| ISCO-08	| SCIAN 2002			| ISIC-3.1	|
-| 2007			| CMO				| ISCO-08	| SCIAN 2002			| ISIC-3.1	|
+| 2005			| CMO 				| ISCO-08	| SCIAN 2007			| ISIC-4	|
+| 2006			| CMO				| ISCO-08	| SCIAN 2007			| ISIC-4	|
+| 2007			| CMO				| ISCO-08	| SCIAN 2007			| ISIC-4	|
 | 2008			| CMO				| ISCO-08	| SCIAN 2007			| ISIC-4	|
 | 2009			| CMO				| ISCO-08	| SCIAN 2007			| ISIC-4	|
 | 2010			| CMO				| ISCO-08	| SCIAN 2007			| ISIC-4	|
 | 2011			| CMO				| ISCO-08	| SCIAN 2007			| ISIC-4	|
 | 2012			| CMO				| ISCO-08	| SCIAN 2007			| ISIC-4	|
 | 2013			| SINCO 2011			| ISCO-08	| SCIAN 2007			| ISIC-4	|
-| 2014			| SINCO 2011			| ISCO-08	| SCIAN 2013			| ISIC-4	|
-| 2015			| SINCO 2011			| ISCO-08	| SCIAN 2013			| ISIC-4	|
-| 2016			| SINCO 2011			| ISCO-08	| SCIAN 2013			| ISIC-4	|
-| 2017			| SINCO 2011			| ISCO-08	| SCIAN 2013			| ISIC-4	|
-| 2018			| SINCO 2011			| ISCO-08	| SCIAN 2013			| ISIC-4	|
-| 2019			| SINCO 2011			| ISCO-08	| SCIAN 2019			| ISIC-4	|
-| 2020			| SINCO 2011			| ISCO-08	| SCIAN 2019			| ISIC-4	|
+| 2014			| SINCO 2011			| ISCO-08	| SCIAN 2007			| ISIC-4	|
+| 2015			| SINCO 2011			| ISCO-08	| SCIAN 2007			| ISIC-4	|
+| 2016			| SINCO 2011			| ISCO-08	| SCIAN 2007			| ISIC-4	|
+| 2017			| SINCO 2011			| ISCO-08	| SCIAN 2007			| ISIC-4	|
+| 2018			| SINCO 2011			| ISCO-08	| SCIAN 2007			| ISIC-4	|
+| 2019			| SINCO 2011			| ISCO-08	| SCIAN 2007			| ISIC-4	|
+| 2020			| SINCO 2011			| ISCO-08	| SCIAN 2007			| ISIC-4	|
 
+## Relevant information from INEGI on the ISIC codes used by ENOE
+
+Please check the following [document](https://github.com/worldbank/gld/blob/1ff9697fbfe571a1b95c6d10c4f8ce5e0d6a7568/Support/B%20-%20Country%20Survey%20Details/MEX/ENOE/utilities/Comentario%20aplicado%20a%20la%20versi%C3%B3n%202(spa-eng).pdf) to get more insight on the ENOE SCIAN codes and the meaning of the digits used in the raw data. 
 
 Further information or questions about the microdata in this webpage can be directed to [World Bank GLD Focal Point](mailto:gld@worldbank.org).
