--- a/Support/B - Country Survey Details/IDN/SAKERNAS/1. Introduction to QLFS.md
+++ b/Support/B - Country Survey Details/IDN/SAKERNAS/1. Introduction to QLFS.md
@@ -1,28 +1,47 @@
-# Introduction to the South African Quarterly Labour Force Survey (QLFS)
+# Introduction to Indonesian labor force survey – Survei Angkatan Kerja Nasional (SAKERNAS)
 
-## What is the ZAF QLFS?
+## What is the IDN SAKERNAS?
 
-The South African Quarterly Labour Force Survey (QLFS) is a household-based sample survey conducted by Statistics South Africa (Stats SA). It is a result of a major revision to the Labour Force Survey (LFS) and now becomes the principal tool for labour market data collection from 2005 to 2021.
+The National Labor Force Survey (or Survei Angkatan Kerja Nasional, SAKERNAS ) is a household-based sample survey conducted by Badan Pusat Statistik (BPS) – Statistics Indonesia. Starting from 1976, SAKERNAS was implemented firstly as a module of the National Socio-Economic Survey (SUSENAS) and then it was separated from SUSENAS and conducted quarterly since 1986. 
 
-## What does the ZAF QLFS cover?
+## What does the IDN SAKERNAS cover?
 
-The ZAF QLFS mainly covers information on demographic details, including age, sex, marital status, location, and education (both academic and vocational), labour market activities, as well as time use and activities over the previous 7 days. Information collected by the ZAF QLFS remains consistent over years. The years and sample size of QLFS harmonized for GLD are:
+The IDN SAKERNAS mainly covers information on demographic details, including age, sex, marital status, and location, education, and labour market activitiesover the previous 7 days. In some most recent years (i.e. 2016-2019), SAKERNAS has become more detailed and covers indiciduals' health conditions and social security status. Years used for harmonization are from 1989 to 2019 except that 1995 was dropped as SAKERNAS was not conducted in that year. There are apparent growths in number and dimension of the variables included in each year's survey over years. The years and sample size of SAKERNAS harmonized for GLD are: 
 
 | Year	| # of Households	| # of Individuals	|
 | :------:	| :-------:		| :-------:	 	|
-| 2008  | 49,221        | 183,384        |
-| 2009  | 47,334        | 173,412        |
-| 2010  | 44,612        | 161,573        |
-| 2011  | 45,044        | 160,350        |
-| 2012  | 45,978        | 161,299        |
-| 2013  | 46,440        | 166,387        |
-| 2014  | 45,396        | 163,995        |
-| 2015  | 40,778        | 139,961        |
-| 2016  | 39,861        | 133,402        |
-| 2017  | 39,418        | 132,713        |
-| 2018  | 39,084        | 131,374        |
-| 2019  | 38,611        | 129,184        |
-| 2020  | 20,865        | 72,396         |
+| 1989  | N/A        | 283,278        |
+| 1990  | 81,814        | 291,095        |
+| 1991  | 81,595       | 282,542        |
+| 1992  | 72,756        | 282,542        |
+| 1993  | 81,618        | 279,784        |
+| 1994  | 72,457        | 245,207        |
+| 1996  | 73,629        | 247,190        |
+| 1997  | 65,648        | 219,439        |
+| 1998  | 49,150        | 163,515        |
+| 1999  | 47,580        | 155,572        |
+| 2000  | 31,439        |  98,952        |
+| 2001  | 38,052        | 119,935        |
+| 2002  | N/A        | 275,342        |
+| 2003  | 76,085        | 232,466        |
+| 2004  | 75,557        | 209,480        |
+| 2005  | 68,645        | 215,775        |
+| 2006  | 70,836        | 193,696        |
+| 2007  | 286,048        | 910,277        |
+| 2008  | 291,656        | 931,890        |
+| 2009  | N/A        | 926,538        |
+| 2010  | N/A        | 930,436        |
+| 2011  | N/A        | 524,810        |
+| 2012  | N/A        | 489,146        |
+| 2013  | N/A        | 476,783        |
+| 2014  | N/A        | 471,525        |
+| 2015  | N/A        | 522,131        |
+| 2016  | N/A        | 131,152        |
+| 2017  | N/A        | 536,809        |
+| 2018  | N/A        | 508,460        |
+| 2019  | N/A        | 782,789        |
+
+Note that even though SAKERNAS is a household-based survey and it indeed has household-related variables in some years, the raw datasets of SAKERNAS, however, do not pro  
 
 ## Where can the data be found?
 
