--- a/Support/B - Country Survey Details/IDN/SAKERNAS/1. Introduction to QLFS.md
+++ b/Support/B - Country Survey Details/IDN/SAKERNAS/1. Introduction to QLFS.md
@@ -41,11 +41,11 @@ The IDN SAKERNAS mainly covers information on demographic details, including age
 | 2018  | N/A        | 508,460        |
 | 2019  | N/A        | 782,789        |
 
-Note that even though SAKERNAS is a household-based survey and it indeed has household-related variables in some years, the raw datasets of SAKERNAS, however, do not pro  
+Note that even though SAKERNAS is a household-based survey and it indeed has household-related variables in some years, not every year's raw dataset provides complete location identification information for unique household ID generation. Therefore, numbers of households are not available (N/A) in the form above for those years without household IDs.  
 
 ## Where can the data be found?
 
-The microdata are free and publicly available on the [DataFirst](https://www.datafirst.uct.ac.za/dataportal/index.php/catalog/StatsSA) website, which provides research data service for African countries, especially for South Africa. DataFirst published all four quarters' data for each year of ZAF QLFS, from 2008 to 2021, as well as a related labor force survey, Labor Market Dynamics (LMDSA), which combines all four quarters together in one single data file. The website also provides all necessary documentation.
+The microdata of SAKERNAS are not publicly available. The raw data we used were acquired by filling in a data request form and then shared by the World Bank Indonesia Team. 
 
 ## What is the sampling procedure?
 
@@ -73,7 +73,7 @@ Two things to be noted regarding geographic significance level:
 
 ## Other noteworthy aspects
 
-### Difference from reported population
+### Unique Household ID Generation
 
 Sample sizes and expanded population (that is the total population estimated using the weights) are compared to the reported data in the publication "*Labour Market Dynamics in South Africa*" by the Statistics South Africa for all years. Reports can be found on DataFirst under "Reports" in the "DOCUMENTATION" section (i.e. 2019 quarter 1 can be found [here](https://www.datafirst.uct.ac.za/dataportal/index.php/catalog/764)). The expanded population estimated using raw data match exactly the numbers in reports of year 2010 to 2019 after rounding.
 
@@ -140,7 +140,7 @@ South Africa has 6 metro cities before 2011 and the country added 2 metros, *Buf
 |       16        |          \-          |  *Mpumalanga, Non-Metro*   |
 |       17        |          \-          |    *Limpopo, Non-Metro*    |
 
-### Coding of sector 
+### Definition of Labor Status and Labor Force Participation 
 
 The original variable `Geo_type` in the QLFS is not an urban-or-rural binary variable. Moreover, it varies over years. As shown in the table below, from 2008 to 2015, `Geo_type` contains urban formal, urban informal, tribal areas, and rural formal. But since 2016, it has urban, traditional, and farm/mining areas.
 
