--- a/Support/B - Country Survey Details/IDN/SAKERNAS/1. Introduction to QLFS.md
+++ b/Support/B - Country Survey Details/IDN/SAKERNAS/1. Introduction to QLFS.md
@@ -49,25 +49,56 @@ The microdata of SAKERNAS are not publicly available. The raw data we used were 
 
 ## What is the sampling procedure?
 
-The QLFS has a stratified two-stage design. The probability is proportional to size sampling of primary sampling units in the first stage and sampling of dwelling units with systematic sampling in the second stage. The sample is designed in such way that it is representative at both provincial level and metro/non-metro level within each province. The survey design has remained the same since 2008. The 2008 guide (see document *Guide to the Quarterly Labour Force Survey* under the ["Documentation" section of the ZAF-STATSSA-QLFS-2008-Q1-V2.1 site](https://www.datafirst.uct.ac.za/dataportal/index.php/catalog/498/related-materials)) outlines the sampling procedure as:
+SAKERNAS uses a two-stage cluster sampling method in general, which includes two steps: 1) selecting the main sampling unit – census blocks and 2) selecting the ultimate sampling unit – households within each main sampling unit. As the frequency of data collection and level of data representativeness have changed over time, the implementation of sample selection methods also changed. For example, year 2007 is a dividing line in that all years before 2007 can only produce representative estimates up to province level whereas all years after 2007 (in cluding 2007) have representativeness untill district level except for the August round of 2016. The exception of year 2016 is because of the reduction on its sample size, which was reduced from 200,000 households to 50,000 households. The knowledge product, *A Guide to Working with Indonesian Survey Data*,  written by the Poverty Global Practice of the World Bank Group outlines the sampling procedure as:
+   
+```
+Probability Proportional to Size method (PPS) is used when selecting census block from Master Sampling Frame (MSF) which contains the list of primary sampling units (PSU or wilcah/wilayah pencacahan). Sampling frame for the annual Sakernas was
+developed using the results of population census conducted previously before the respective Sakernas was conducted, while sampling frame for the quarterly Sakernas was obtained from the sampling frame of Susenas. For example, sampling frame for Sakernas 2003 was derived from the results of 2000 Population Census (SP2000), while sampling frame used in Sakernas 2011 was coming from Susenas 2011 sampling frame.
 
-    The Labour Force Survey frame has been developed as a general purpose household survey frame that can be used by all other household surveys irrespective of the sample size requirement of the survey. The sample size for the QLFS is roughly 30 000 dwellings and these are divided equally into four rotation groups, i.e. 7 500 dwellings per rotation group.
+After census blocks were selected, a systematical random sampling method is then used to select households
+within census block (16 households per census block before 2011 and 10 households per census block since 2011). To
+describe more clearly about how the sampling is done in Sakernas, this chapter covers two specific examples, i.e. for
+Sakernas 2007 to 2010 and 2011 to 2015.
 
-    The sample is based on information collected during the 2001 Population Census conducted by Stats SA. In preparation for the 2001 census, the country was divided into 80 787 enumeration areas (EAs). Some of these EAs are small in terms of the number of households that were enumerated in them at the time of Census 2001. Stats SA's household-based surveys use a Master Sample which comprises of EAs that are drawn from across the country. For the purposes of the Master Sample the EAs that contained less than 25 households were excluded from the sampling frame, and those that contained between 25 and 99 households were combined with other EAs to form Primary Sampling Units (PSUs). The number of EAs per PSU ranges between one and four. On the other hand, very large EAs represent two or more PSUs.
+In Sakernas 2007 to 2010, the Master Sampling Frame was developed using the results of 2006 Economic
+Census. Sampling procedure was done by district/city and was separated between urban and rural areas. For each
+district/city, there were two stages sampling method as follows:
 
-    The sample is designed to be representative at the provincial level and within provinces at the metro/non-metro level. Within the metros, the sample is further distributed by geography type. The four geography types are: urban formal, urban informal, farms and tribal. This implies that for example, that within a metropolitan area the sample is designed to be representative at the different geography types that may exist within that metro.
+1.First stage: From the MSF, n(h) census blocks were selected (h=1 for urban and h=0 for rural) using Probability
+Proportional to Size (PPS) method.
 
-    The current sample size is 3 080 PSUs. It is equally divided into four sub-groups or panels called rotation groups. The rotation groups are designed in such a way that each of these groups has the same distribution pattern as that which is observed in the whole sample. They are numbered from one to four and these numbers also correspond to the quarters of the year in which the sample will be rotated for the particular group.
+2.Second stage: From each census block that had been selected in the first stage, 16 households were selected
+using a systematic random sampling method.
 
-    The sample for the redesigned Labour Force Survey is based on a stratified two-stage design with probability proportional to size (PPS) sampling of primary sampling units (PSUs) in the first stage, and sampling of dwelling units (DUs) with systematic sampling in the second stage.
+In Sakernas 2011 to 2015, the Master Sampling Frame is developed using the results of 2010 Population Census
+(SP2010), which has been updated every time before the survey will take place. Starting from 2011, the period in which
+Sakernas began to be conducted quarterly, household samples are selected using three-stage withdrawal, with the
+following steps:
+
+1.First stage: From the MSF, 30,000 PSUs are selected for Susenas sampling frame by using the method of PPS.
+These 30,000 PSUs are then randomly allocated evenly for each quarter of Susenas, i.e. 7,500 PSU for each
+quarter. From 7,500 PSUs of Susenas Quarter I, 5,000 PSUs were systematically selected to be used for Sakernas
+Quarter I (February), and will be used again for Sakernas Quarters II (May), III (August), and IV (November).
+
+2.Second stage: From each PSU in the 5,000 selected PSUs, two census blocks were selected using PPS method,
+proportional to number of households based on SP2010 results. These selected census blocks were then
+randomly allocated for Susenas and Sakernas (1 census block for Susenas and 1 census block for Sakernas). The
+selected census blocks for Sakernas were utilized for provincial estimates and divided into 4 sample packages,
+each of which consists of 1,250 census blocks.
+
+3.Third stage: From each census block selected in the second stage, 10 households were selected using
+systematic random sampling.
+
+```    
+  
 
 ## What is the geographic significance level?
 
-The official reports detail results by gender, sector (urban formal, urban informal, farms and tribal, mining areas etc.), province, and metro/non-metro area. Province is the first administrative level at which the survey sample is representative whereas metro/non-metro area is the second level.
+The official reports detail results by gender, sector (urban and rural etc.), province, and district(or kab). Province is the first administrative level at which data from 1989 to 2006 are representative whereas district is the second level at which data from 2007 to 2019 are representative.
 
 Two things to be noted regarding geographic significance level:
 
-1)  South Africa has 9 provinces which are currently divided into 52 districts. The 52 districts are further categorized into two types --- 44 non-metropolitan and 8 large city areas called metros. In the survey, the way of grouping these metro and non-metro areas changes before and after 2014. See more details below in the *"*[Changes in sub-national level categorization](#Changes-in-sub-national-level-categorization)*"* section.
+1) Historical changes to administrative divisions:  South Africa has 9 provinces which are currently divided into 52 districts. The 52 districts are further categorized into two types --- 44 non-metropolitan and 8 large city areas called metros. In the survey, the way of grouping these metro and non-metro areas changes before and after 2014. See more details below in the *"*[Changes in sub-national level categorization](#Changes-in-sub-national-level-categorization)*"* section.
 
 2)  The original categorization of sector varies across years. Principally, the QLFS uses "Urban formal", "Urban informal", "Tribal areas", and "Farms and mining areas". But in no documentation does it clarify the categories in terms of urban/rural classification. See more details including the decision rule for harmonization below in the *"*[Coding of sector](#Coding-of-sector)*"* section.
 
