--- a/Support/B - Country Survey Details/IDN/SAKERNAS/1. Introduction to QLFS.md
+++ b/Support/B - Country Survey Details/IDN/SAKERNAS/1. Introduction to QLFS.md
@@ -98,7 +98,50 @@ The official reports detail results by gender, sector (urban and rural etc.), pr
 
 Two things to be noted regarding geographic significance level:
 
-1) Historical changes to administrative divisions:  South Africa has 9 provinces which are currently divided into 52 districts. The 52 districts are further categorized into two types --- 44 non-metropolitan and 8 large city areas called metros. In the survey, the way of grouping these metro and non-metro areas changes before and after 2014. See more details below in the *"*[Changes in sub-national level categorization](#Changes-in-sub-national-level-categorization)*"* section.
+1) Historical changes to administrative divisions: the provinces and districts in SAKERNAS do not necessarily reflect the real administrative divisions in the same year. One reason is because of the time lag – SAKERNAS might still used the old names and coding for provinces even though the system has been changed. Or on the contrary, SAKERNAS had acted before the change actually happened. The other reason is the lack of information about province names or inconsistent coding of divisions in some years. For our harmonization purpose, we used province names in the last harmonized year, 2019, as the standard version for all years' provinces; and year 2013 for all years' districts. For example, in SAKERNAS 1991 and 1993, there are only 24 unique province codes in the raw datasets and only 9 of 24 match the province codes in record of all time. Another example is that 54-Timur Timor (or East Timor) became independent from Indonesia in 2002 but SAKERNAS excludes Timur Timor since 2000. 
+
+|   Code   | Province | Appearance Year | # Drops | Reported population | Estimated population(raw data) |
+| :------: | :------: | :-------------: | :-----: | :-----------------: | :----------------------------: |
+| **11** | **ACEH**         | 375,856               | 62      | 49,562,000          | 49,373,878                     | 
+| **12** | **SUMATERA UTARA**         | 359,423               | 42      | 50,224,000          | 50,044,374                     |  
+| **13** | **SUMATERA BARAT**         | 342,445               | 21      | 50,896,000          | 50,896,271                     |
+| **14** | **RIAU**         | 333,780               | 159     | 51,580,000          | 51,580,122                     |
+| **15** | **JAMBI**         | 339,697               | 161     | 52,275,000          | 52,275,309                     | 
+| **16** | **SUMATERA SELATAN**         | 346,511               | 176     | 52,982,000          | 52,982,369                     | 
+| **17** | **BENGKULU**         | 341,186               | 134     | 53,701,000          | 53,701,488                     | 
+| **18** | **LAMPUNG**         | 286,709               | 73      | 54,433,000          | 54,432,731                     | 
+| **19** | **KEPULAUAN BANGKA BELITUNG**         | 275,202               | 104     | 55,174,000          | 55,173,509                     | 
+| **21** | **KEPULAUAN RIAU**         | 276,773               | 103     | 55,906,000          | 55,905,546                     |     
+| **31** | **DKI JAKARTA**         | 275,247               | 135     | 56,623,000          | 56,622,824                     |  
+| **32** | **JAWA BARAT**         | 270,215               | 143     | 57,342,000          | 57,341,699                     |
+| **33** | **JAWA TENGAH**         | 209,890               | 27      | N/A                 | 58,064,779                     | 
+| **34** | **DI YOGYAKARTA**         | 209,890               | 27      | N/A                 | 58,064,779                     | 
+| **35** | **JAWA TIMUR**         | 209,890               | 27      | N/A                 | 58,064,779                     | 
+| **36** | **BANTEN**         | 209,890               | 27      | N/A                 | 58,064,779                     | 
+| **51** | **BALI**        | 209,890               | 27      | N/A                 | 58,064,779                     | 
+| **52** | **NUSA TENGGARA BARAT**         | 209,890               | 27      | N/A                 | 58,064,779                     | 
+| **53** | **NUSA TENGGARA TIMUR**         | 209,890               | 27      | N/A                 | 58,064,779                     | 
+| **54** | **TIMUR TIMOR**         | 209,890               | 27      | N/A                 | 58,064,779                     | 
+| **61** | **KALIMANTAN BARAT**         | 209,890               | 27      | N/A                 | 58,064,779                     | 
+| **62** | **KALIMANTAN TENGAH**         | 209,890               | 27      | N/A                 | 58,064,779                     | 
+| **63** | **KALIMANTAN SELATAN**         | 209,890               | 27      | N/A                 | 58,064,779                     | 
+| **64** | **KALIMANTAN TIMUR**         | 209,890               | 27      | N/A                 | 58,064,779                     | 
+| **65** | **KALIMANTAN UTARA**         | 209,890               | 27      | N/A                 | 58,064,779                     | 
+| **71** | **SULAWESI UTARA**         | 209,890               | 27      | N/A                 | 58,064,779                     | 
+| **72** | **SULAWESI TENGAH**         | 209,890               | 27      | N/A                 | 58,064,779                     | 
+| **73** | **SULAWESI SELATAN**         | 209,890               | 27      | N/A                 | 58,064,779                     | 
+| **74** | **SULAWESI TENGGARA**         | 209,890               | 27      | N/A                 | 58,064,779                     | 
+| **75** | **GORONTALO**         | 209,890               | 27      | N/A                 | 58,064,779                     | 
+| **76** | **SULAWESI BARAT**        | 209,890               | 27      | N/A                 | 58,064,779                     | 
+| **81** | **MALUKU**        | 209,890               | 27      | N/A                 | 58,064,779                     | 
+| **82** | **MALUKU UTARA**         | 209,890               | 27      | N/A                 | 58,064,779                     | 
+| **91** | **PAPUA BARAT**         | 209,890               | 27      | N/A                 | 58,064,779                     | 
+| **92** | **Irian Jaya Tengah**         | 209,890               | 27      | N/A                 | 58,064,779                     | 
+| **93** | **Irian Jaya Timur**         | 209,890               | 27      | N/A                 | 58,064,779                     | 
+| **94** | **PAPUA**         | 209,890               | 27      | N/A                 | 58,064,779                     | 
+
+
+4) South Africa has 9 provinces which are currently divided into 52 districts. The 52 districts are further categorized into two types --- 44 non-metropolitan and 8 large city areas called metros. In the survey, the way of grouping these metro and non-metro areas changes before and after 2014. See more details below in the *"*[Changes in sub-national level categorization](#Changes-in-sub-national-level-categorization)*"* section.
 
 2)  The original categorization of sector varies across years. Principally, the QLFS uses "Urban formal", "Urban informal", "Tribal areas", and "Farms and mining areas". But in no documentation does it clarify the categories in terms of urban/rural classification. See more details including the decision rule for harmonization below in the *"*[Coding of sector](#Coding-of-sector)*"* section.
 
