--- a/Support/B - Country Survey Details/IDN/SAKERNAS/1. Introduction to QLFS.md
+++ b/Support/B - Country Survey Details/IDN/SAKERNAS/1. Introduction to QLFS.md
@@ -8,38 +8,38 @@ The National Labor Force Survey (or Survei Angkatan Kerja Nasional, SAKERNAS ) i
 
 The IDN SAKERNAS mainly covers information on demographic details, including age, sex, marital status, and location, education, and labour market activitiesover the previous 7 days. In some most recent years (i.e. 2016-2019), SAKERNAS has become more detailed and covers indiciduals' health conditions and social security status. Years used for harmonization are from 1989 to 2019 except that 1995 was dropped as SAKERNAS was not conducted in that year. There are apparent growths in number and dimension of the variables included in each year's survey over years. The years and sample size of SAKERNAS harmonized for GLD are: 
 
-| Year	| # of Households	| # of Individuals	|
-| :------:	| :-------:		| :-------:	 	|
-| 1989  | N/A        | 283,278        |
-| 1990  | 81,814        | 291,095        |
-| 1991  | 81,595       | 282,542        |
-| 1992  | 72,756        | 282,542        |
-| 1993  | 81,618        | 279,784        |
-| 1994  | 72,457        | 245,207        |
-| 1996  | 73,629        | 247,190        |
-| 1997  | 65,648        | 219,439        |
-| 1998  | 49,150        | 163,515        |
-| 1999  | 47,580        | 155,572        |
-| 2000  | 31,439        |  98,952        |
-| 2001  | 38,052        | 119,935        |
-| 2002  | N/A        | 275,342        |
-| 2003  | 76,085        | 232,466        |
-| 2004  | 75,557        | 209,480        |
-| 2005  | 68,645        | 215,775        |
-| 2006  | 70,836        | 193,696        |
-| 2007  | 286,048        | 910,277        |
-| 2008  | 291,656        | 931,890        |
-| 2009  | N/A        | 926,538        |
-| 2010  | N/A        | 930,436        |
-| 2011  | N/A        | 524,810        |
-| 2012  | N/A        | 489,146        |
-| 2013  | N/A        | 476,783        |
-| 2014  | N/A        | 471,525        |
-| 2015  | N/A        | 522,131        |
-| 2016  | N/A        | 131,152        |
-| 2017  | N/A        | 536,809        |
-| 2018  | N/A        | 508,460        |
-| 2019  | N/A        | 782,789        |
+| Year	| # of Households	| # of Individuals	| Expanded Population	|
+| :------:	| :-------:		| :-------:	 	| :-------:	 	|
+| 1989  | N/A        | 283,278        |  264,569,316     |
+| 1990  | 81,814        | 291,095        |  135,714,449     |
+| 1991  | 81,595       | 282,542        |  137,310,249     |
+| 1992  | 72,756        | 282,542        |  140,774,459     |
+| 1993  | 81,618        | 279,784        |  143,792,299     |
+| 1994  | 72,457        | 245,207        |  147,807,154     |
+| 1996  | 73,629        | 247,190        |  154,460,720     |
+| 1997  | 65,648        | 219,439        |  157,393,266     |
+| 1998  | 49,150        | 163,515        |  160,315,818     |
+| 1999  | 47,580        | 155,572        |  162,039,307     |
+| 2000  | 31,439        |  98,952        |  161,369,415     |
+| 2001  | 38,052        | 119,935        |  164,896,728     |
+| 2002  | N/A        | 275,342        |  212,540,647     |
+| 2003  | 76,085        | 232,466        |  170,856,677     |
+| 2004  | 75,557        | 209,480        |  153,948,922     |
+| 2005  | 68,645        | 215,775        |  177,423,583     |
+| 2006  | 70,836        | 193,696        |  160,811,498     |
+| 2007  | 286,048        | 910,277        |  184,782,929     |
+| 2008  | 291,656        | 931,890        |  187,553,465     |
+| 2009  | N/A        | 926,538        |  189,989,229     |
+| 2010  | N/A        | 930,436        |  189,155,010     |
+| 2011  | N/A        | 524,810        |  164,914,010     |
+| 2012  | N/A        | 489,146        |  166,540,943     |
+| 2013  | N/A        | 476,783        |  169,068,867     |
+| 2014  | N/A        | 471,525        |  174,924,561     |
+| 2015  | N/A        | 522,131        |  184,898,265     |
+| 2016  | N/A        | 131,152        |  189,096,722     |
+| 2017  | N/A        | 536,809        |  192,010,262     |
+| 2018  | N/A        | 508,460        |  194,779,441     |
+| 2019  | N/A        | 782,789        |  197,911,777     |
 
 Note that even though SAKERNAS is a household-based survey and it indeed has household-related variables in some years, not every year's raw dataset provides complete location identification information for unique household ID generation. Therefore, numbers of households are not available (N/A) in the form above for those years without household IDs.  
 
