--- a/Support/B - Country Survey Details/IDN/SAKERNAS/1. Introduction to QLFS.md
+++ b/Support/B - Country Survey Details/IDN/SAKERNAS/1. Introduction to QLFS.md
@@ -100,45 +100,45 @@ Two things to be noted regarding geographic significance level:
 
 1) Historical changes to administrative divisions: the provinces and districts in SAKERNAS do not necessarily reflect the real administrative divisions in the same year. One reason is because of the time lag – SAKERNAS might still used the old names and coding for provinces even though the system has been changed. Or on the contrary, SAKERNAS had acted before the change actually happened. The other reason is the lack of information about province names or inconsistent coding of divisions in some years. For our harmonization purpose, we used province names in the last harmonized year, 2019, as the standard version for all years' provinces; and year 2013 for all years' districts. For example, in SAKERNAS 1991 and 1993, there are only 24 unique province codes in the raw datasets and only 9 of 24 match the province codes in record of all time. Another example is that 54-Timur Timor (or East Timor) became independent from Indonesia in 2002 but SAKERNAS excludes Timur Timor since 2000. 
 
-|   Code   | Province | Appearance Year | # Drops | Reported population | 
-| :------: | :------: | :-------------: | :-----: | :-----------------: | 
-| **11** | **ACEH**         | 1989-2019               | 62      | 49,562,000          | 
-| **12** | **SUMATERA UTARA**         |  1989-1990, 1992, 1994-2019            | 42      | 50,224,000          |  
-| **13** | **SUMATERA BARAT**         |  1989-1990, 1992, 1994-2019               | 21      | 50,896,000          | 
-| **14** | **RIAU**         |  1989-2019            | 159     | 51,580,000          | 
-| **15** | **JAMBI**         |  1989-2019              | 161     | 52,275,000          | 
-| **16** | **SUMATERA SELATAN**         |  1989-2019                | 176     | 52,982,000          |
-| **17** | **BENGKULU**         |  1989-2019                | 134     | 53,701,000          | 
-| **18** | **LAMPUNG**         |  1989-2019                | 73      | 54,433,000          | 
-| **19** | **KEPULAUAN BANGKA BELITUNG**         |  2001-2019               | 104     | 55,174,000          | 
-| **21** | **KEPULAUAN RIAU**         |  2005-2019                | 103     | 55,906,000          | 
-| **31** | **DKI JAKARTA**         |  1989-2019               | 135     | 56,623,000          | 
-| **32** | **JAWA BARAT**         |  1989-1990, 1992, 1994-2019               | 143     | 57,342,000          | 57,341,699                     |
-| **33** | **JAWA TENGAH**         |  1989-2019               | 27      | N/A                 | 58,064,779                     | 
-| **34** | **DI YOGYAKARTA**         |  1989-1990, 1992, 1994-2019               | 27      | N/A                 | 58,064,779             | 
-| **35** | **JAWA TIMUR**         |  1989-2019               | 27      | N/A                 | 58,064,779                     | 
-| **36** | **BANTEN**         |  2001-2019               | 27      | N/A                 | 58,064,779                     | 
-| **51** | **BALI**        |  1989-1990, 1992, 1994-2019               | 27      | N/A                 | 58,064,779                     | 
-| **52** | **NUSA TENGGARA BARAT**         |  1989-1990, 1992, 1994-2019               | 27      | N/A        | 58,064,779                     | 
-| **53** | **NUSA TENGGARA TIMUR**         |  1989-1990, 1992, 1994-1999               | 27      | N/A        | 58,064,779                     | 
-| **54** | **TIMUR TIMOR**         |  1989-1990, 1992, 1994-2019               | 27      | N/A                 | 58,064,779                     | 
-| **61** | **KALIMANTAN BARAT**         |  1989-1990, 1992, 1994-2019             | 27      | N/A     | 58,064,779                     | 
-| **62** | **KALIMANTAN TENGAH**         |  1989-1990, 1992, 1994-2019               | 27      | N/A  | 58,064,779                     | 
-| **63** | **KALIMANTAN SELATAN**         |  1989-1990, 1992, 1994-2019              | 27      | N/A  | 58,064,779                     | 
-| **64** | **KALIMANTAN TIMUR**         |  1989-1990, 1992, 1994-2019               | 27      | N/A   | 58,064,779                     | 
-| **65** | **KALIMANTAN UTARA**         |  2015-2019               | 27      | N/A                 | 58,064,779                     | 
-| **71** | **SULAWESI UTARA**         |  1989-1990, 1992, 1994-2019               | 27      | N/A    | 58,064,779                     | 
-| **72** | **SULAWESI TENGAH**         |  1989-1990, 1992, 1994-2019               | 27      | N/A    | 58,064,779                     | 
-| **73** | **SULAWESI SELATAN**         |  1989-1990, 1992, 1994-2019               | 27      | N/A   | 58,064,779                     | 
-| **74** | **SULAWESI TENGGARA**         |  1989-1990, 1992, 1994-2019               | 27      | N/A  | 58,064,779                     | 
-| **75** | **GORONTALO**         |  2001-2019               | 27      | N/A                 | 58,064,779                     | 
-| **76** | **SULAWESI BARAT**        |  2003-2019               | 27      | N/A                 | 58,064,779                     | 
-| **81** | **MALUKU**        |  1989-1990, 1992, 1994-1999，2001-2019               | 27      | N/A| 58,064,779                     | 
-| **82** | **MALUKU UTARA**         |  1989-1990, 1992, 1994-2019               | 27      | N/A    | 58,064,779                     | 
-| **91** | **PAPUA BARAT**         |  2001-2002，2006-2019               | 27      | N/A     | 58,064,779                     | 
-| **92** | **IRIAN JAYA TENGAH**         |  2001-2002               | 27      | N/A                 | 58,064,779                     | 
-| **93** | **Irian JAYA TIMUR**         |  2001-2002               | 27      | N/A                 | 58,064,779                     | 
-| **94** | **PAPUA**         |  2003-2019              | 27      | N/A                 | 58,064,779                     | 
+|   Code   | Province | Year of Appearance | Reason for Exclusion |
+| :------: | :------: | :-------------: | :-----: | 
+| **11** | **ACEH**         | 1989-2019               | -      | 
+| **12** | **SUMATERA UTARA**         |  1989-1990, 1992, 1994-2019            |    Unconventional province codes    |
+| **13** | **SUMATERA BARAT**         |  1989-1990, 1992, 1994-2019               |    Unconventional province codes      | 
+| **14** | **RIAU**         |  1989-2019            | -     | 
+| **15** | **JAMBI**         |  1989-2019              | -     | 
+| **16** | **SUMATERA SELATAN**         |  1989-2019                | -     | 
+| **17** | **BENGKULU**         |  1989-2019                | -     | 
+| **18** | **LAMPUNG**         |  1989-2019                | -      | 
+| **19** | **KEPULAUAN BANGKA BELITUNG**         |  2001-2019               | Split from SUMATERA SELATAN in 2000     | 
+| **21** | **KEPULAUAN RIAU**         |  2005-2019                | Split from RIAU in 2002  | 
+| **31** | **DKI JAKARTA**         |  1989-2019               | -     | 
+| **32** | **JAWA BARAT**         |  1989-1990, 1992, 1994-2019               | Unconventional province codes     | 
+| **33** | **JAWA TENGAH**         |  1989-2019               | -     |  
+| **34** | **DI YOGYAKARTA**         |  1989-1990, 1992, 1994-2019               | Unconventional province codes      | 
+| **35** | **JAWA TIMUR**         |  1989-2019               | -      | 
+| **36** | **BANTEN**         |  2001-2019               | Split from JAWA BARAT in 2000   | 
+| **51** | **BALI**        |  1989-1990, 1992, 1994-2019               | Unconventional province codes      |   
+| **52** | **NUSA TENGGARA BARAT**         |  1989-1990, 1992, 1994-2019               | Unconventional province codes      |
+| **53** | **NUSA TENGGARA TIMUR**         |  1989-1990, 1992, 1994-1999               | Unconventional province codes      |
+| **54** | **TIMUR TIMOR**         |  1989-1990, 1992, 1994-1999               | Became independent in 2002    | 
+| **61** | **KALIMANTAN BARAT**         |  1989-1990, 1992, 1994-2019             | Unconventional province codes    | 
+| **62** | **KALIMANTAN TENGAH**         |  1989-1990, 1992, 1994-2019               | Unconventional province codes  | 
+| **63** | **KALIMANTAN SELATAN**         |  1989-1990, 1992, 1994-2019              | Unconventional province codes  | 
+| **64** | **KALIMANTAN TIMUR**         |  1989-1990, 1992, 1994-2019               |  Unconventional province codes   |  
+| **65** | **KALIMANTAN UTARA**         |  2015-2019               | Split from KALIMANTAN TIMUR in 2012  | 
+| **71** | **SULAWESI UTARA**         |  1989-1990, 1992, 1994-2019               |  Unconventional province codes    |  
+| **72** | **SULAWESI TENGAH**         |  1989-1990, 1992, 1994-2019               | Unconventional province codes    | 
+| **73** | **SULAWESI SELATAN**         |  1989-1990, 1992, 1994-2019               | Unconventional province codes   |  
+| **74** | **SULAWESI TENGGARA**         |  1989-1990, 1992, 1994-2019               | Unconventional province codes  |
+| **75** | **GORONTALO**         |  2001-2019               | Split from SULAWESI UTARA |
+| **76** | **SULAWESI BARAT**        |  2006-2019               | Split from SULAWESI SELATAN in 2004   | 
+| **81** | **MALUKU**        |  1989-1990, 1992, 1994-1999，2001-2019               | Unconventional province codes | 
+| **82** | **MALUKU UTARA**         |  1989-1990, 1992, 1994-2019               | Unconventional province codes | 
+| **91** | **PAPUA BARAT**         |  2001-2002，2006-2019               | Split from PAPUA in 2003    | 
+| **92** | **IRIAN JAYA TENGAH**         |  2001-2002               | Split from PAPUA in 2003      | 
+| **93** | **Irian JAYA TIMUR**         |  2001-2002               | Split from PAPUA in 2003      |  
+| **94** | **PAPUA**         |  2003-2019              | Not incluided in the survey untill 2003                 | 
 
 
 4) South Africa has 9 provinces which are currently divided into 52 districts. The 52 districts are further categorized into two types --- 44 non-metropolitan and 8 large city areas called metros. In the survey, the way of grouping these metro and non-metro areas changes before and after 2014. See more details below in the *"*[Changes in sub-national level categorization](#Changes-in-sub-national-level-categorization)*"* section.
